# Pn532

./: .gitignore  CLAUDE.md  README.md
docs/: hardware.md  legal.md  windows.md  workflows.md
firmware/: README.md  platformio.ini
firmware/src/: main.cpp  nfc.cpp  nfc.h  pins.h  profile.cpp  profile.h  serial_proto.cpp  serial_proto.h  storage.cpp  storage.h  ui.cpp  ui.h
host/: pyproject.toml
host/nfcmsr/: __init__.py  apdu.py  cli.py  msr605x.py  pn532_serial.py  profile.py  smartcard.py
host/nfcmsr/schemas/: card_profile.schema.json
host/tests/: test_apdu.py  test_msr605x.py  test_pn532_serial.py  test_profile.py
shared/examples/: sample_profile.json
shared/schemas/: card_profile.schema.json
